# oss-rs

./: .gitignore  Cargo.toml  README.md  build.rs  oss-rs.yml
.run/: Run.run.xml
doc/: 升级数据库.adoc  常用命令.adoc  测试文件上传.adoc  生成模型命令.adoc
migrations/: 20250926114653_create-table.sql  20250930091722_create-table.sql  20251009035044_create-table.sql  20251009115002_create-table.sql
model/: create-table-mysql.sql  create-table-pgsql.sql  create-table.sql  oss-mysql.apm  oss-mysql.pdm  oss-pgsql.pdm  oss.ldm  oss.prj
oss-api/: Cargo.toml  README.md
oss-api-client/: Cargo.toml  README.md
oss-api-client/src/: lib.rs
oss-api-client/src/api_client/: mod.rs  oss_api_client_utils.rs  oss_file_api_client.rs
oss-api-client/src/vo/: oss_bucket.rs  oss_obj.rs  oss_obj_ref.rs
oss-api/src/: lib.rs
oss-api/src/api/: mod.rs  oss_api_utils.rs  oss_file_api.rs
oss-api/src/vo/: oss_obj_ref.rs
oss-svr/: .env  Cargo.toml  README.md  build.rs  log.toml  oss-svr.toml
oss-svr/cert/: cert.pem
oss-svr/certs/: key.pem
oss-svr/migrations/mysql/: 20260303022725_create-table.sql
oss-svr/migrations/pgsql/: 20251010073813_create-table.sql  20251225071622_alert-table.sql  20260311081651_alert-table.sql  20260312032700_alert-table.sql  20260313030703_alert-table.sql  20260313104453_alert-table.sql  20260314075915_alert-table.sql  20260316085205_alert-table.sql  20260316092808_alert-table.sql
oss-svr/src/: api_config.rs  db.rs  env.rs  lib.rs  log.rs  main.rs  migration.rs  web_server.rs  web_service_config.rs
oss-svr/src/api/: oss_bucket_api.rs  oss_bucket_api_doc.rs  oss_file_api.rs  oss_file_api_doc.rs  oss_obj_api.rs  oss_obj_api_doc.rs  oss_obj_ref_api.rs  oss_obj_ref_api_doc.rs
oss-svr/src/api_doc/: mod.rs  oss_bucket_api_doc.rs  oss_file_api_doc.rs  oss_obj_api_doc.rs  oss_obj_ref_api_doc.rs
oss-svr/src/app/: app_config.rs  mod.rs
oss-svr/src/base/api/: upload_form.rs
oss-svr/src/config/: app_config.rs  mod.rs  oss_config.rs
oss-svr/src/ctrl/: oss_bucket_ctrl.rs  oss_file_ctrl.rs  oss_obj_ctrl.rs  oss_obj_ref_ctrl.rs
oss-svr/src/dao/: mod.rs  oss_bucket_dao.rs  oss_obj_dao.rs  oss_obj_ref_dao.rs
oss-svr/src/dto/: mod.rs  oss_bucket_dto.rs  oss_obj_dto.rs  oss_obj_ref_dto.rs
oss-svr/src/global/: app_config_global.rs  mod.rs
oss-svr/src/model/: mod.rs  oss_bucket.rs  oss_obj.rs  oss_obj_ref.rs  prelude.rs
oss-svr/src/settings/: mod.rs  oss_settings.rs  settings.rs
oss-svr/src/svc/: mod.rs  oss_bucket_svc.rs  oss_file_svc.rs  oss_obj_ref_svc.rs  oss_obj_svc.rs
oss-svr/src/to/: oss_bucket.rs  oss_obj.rs  oss_obj_ref.rs
oss-svr/src/vo/: mod.rs  oss_bucket.rs  oss_bucket_vo.rs  oss_obj_ref.rs  oss_obj_ref_vo.rs  oss_obj_vo.rs
oss-svr/src/web/: mod.rs
oss-svr/src/web/api_doc/: oss_bucket_api_doc.rs  oss_file_api_doc.rs  oss_obj_api_doc.rs  oss_obj_ref_api_doc.rs
oss-svr/src/web/ctrl/: mod.rs  oss_bucket_ctrl.rs  oss_file_ctrl.rs  oss_obj_ctrl.rs  oss_obj_ref_ctrl.rs
oss-svr/src/web/router/: mod.rs  oss_bucket_router.rs  oss_file_router.rs  oss_obj_ref_router.rs  oss_obj_router.rs
oss-svr/tests/: TestPlayVideo.html
src/: api_config.rs  api_doc.rs  config.rs  db.rs  env.rs  id_worker.rs  lib.rs  log.rs  main.rs  migration.rs  web_server.rs
src/api/: api_config.rs  api_error.rs  mod.rs  oss_bucket_api.rs  oss_bucket_api_doc.rs  oss_file_api.rs  oss_obj_api.rs  oss_obj_ref_api.rs
src/app_data/: db_app_data.rs  mod.rs
src/base/: mod.rs
src/base/api/: api_error.rs  api_utils.rs  mod.rs
src/base/svc/: svc_error.rs
src/dao/: mod.rs  oss_bucket_dao.rs  oss_obj_dao.rs  oss_obj_ref_dao.rs
src/model/: mod.rs  oss_bucket.rs  oss_obj.rs  oss_obj_ref.rs  prelude.rs
src/ro/: mod.rs  ro.rs  ro_code.rs  ro_result.rs
src/settings/: id_worker_settings.rs  oss_settings.rs  settings.rs  web_server_settings.rs
src/svc/: mod.rs  oss_bucket_svc.rs  oss_file_svc.rs  oss_obj_ref_svc.rs  oss_obj_svc.rs  svc_error.rs  svc_utils.rs
src/to/: mod.rs  oss_bucket.rs  oss_obj.rs  oss_obj_ref.rs
src/utils/: api_utils.rs  db.rs  file_utils.rs  mod.rs  svc_utils.rs  time_utils.rs  upload.rs
src/vo/: mod.rs  oss_bucket.rs  oss_obj.rs  oss_obj_ref.rs
