[workspace]
members = ["oss-api-client", "oss-svr"]
resolver = "3"

[workspace.dependencies]
# cross打包时用，需要开启vendored feature
openssl = "0.10.75"

anyhow = "1.0.102"
log = "0.4.29"
tracing = "0.1.44"
clap = "4.5.60"
chrono = "0.4.44"
serde = "1.0.228"
serde_with = "3.16.1"
serde_json = "1.0.149"
reqwest = "0.13.2"
tokio = "1.49.0"
actix-web = "4.13.0"
actix-multipart = "0.7.2"
sea-orm = "1.1.19"
sqlx = "0.8.6"
bytesize = "2.3.1"
regex = "1.12.3"
tempfile = "3.25.0"
once_cell = "1.21.3"
o2o = "0.5.4"
validator = "0.20.0"
strum = "0.27.2"
utoipa = "5.4.0"
utoipa-swagger-ui = "9.0.2"

idworker = "1.1.0"
wheel-rs = "1.3.1"
robotech = "1.5.0"

[patch.crates-io]
idworker = { path = "../idworker" }
wheel-rs = { path = "../wheel-rs" }
robotech = { path = "../robotech-rs/robotech" }
