[workspace]
members = ["oss-api-client", "oss-svr"]
resolver = "3"

[workspace.dependencies]
# cross打包时用，需要开启vendored feature
openssl = "0.10.76"

anyhow = "1.0.102"
log = "0.4.29"
tracing = "0.1.44"
clap = "4.6.0"
chrono = "0.4.44"
derive_setters = "0.1.9"
typed-builder = "0.23.2"
serde = "1.0.228"
serde_with = "3.18.0"
serde_json = "1.0.149"
reqwest = "0.13.2"
tokio = "1.51.0"
axum = "0.8.8"
sqlx = "0.9.0-alpha.1"
sea-orm = "2.0.0-rc.37"
linkme = "0.3.35"
bytesize = "2.3.1"
regex = "1.12.3"
tempfile = "3.27.0"
o2o = "0.5.4"
validator = "0.20.0"
strum = "0.28.0"
utoipa = "5.4.0"
utoipa-swagger-ui = "9.0.2"
utoipauto = "0.3.0-alpha.2"
sha2 = "0.11.0"
hex = "0.4.3"

idworker = "1.1.0"
wheel-rs = "1.3.1"
robotech = "1.5.0"

[patch.crates-io]
idworker = { path = "../idworker" }
wheel-rs = { path = "../wheel-rs" }
robotech = { path = "../robotech-rs/robotech" }
