[workspace]
members = ["oss-api-client", "oss-svr"]
resolver = "3"

[workspace.dependencies]
# cross打包时用，需要开启vendored feature
openssl = "0.10.81"

anyhow = "1.0.103"
log = "0.4.33"
tracing = "0.1.44"
clap = "4.6.1"
chrono = "0.4.45"
derive_setters = "0.1.9"
typed-builder = "0.23.2"
serde = "1.0.228"
serde_with = "3.21.0"
serde_json = "1.0.150"
reqwest = "0.13.4"
tokio = "1.52.3"
tokio-util = "0.7.18"
axum = "0.8.9"
sqlx = "0.9.0"
sea-orm = "2.0.0-rc.41"
linkme = "0.3.36"
bytesize = "2.4.0"
regex = "1.12.4"
tempfile = "3.27.0"
o2o = "0.5.4"
validator = "0.20.0"
strum = "0.28.0"
utoipa = "5.5.0"
utoipa-swagger-ui = "9.0.2"
utoipauto = "0.3.0-alpha.2"
sha2 = "0.11.0"
hex = "0.4.3"

idworker = "1.1.1"
wheel-rs = "1.8.1"
robotech = "1.7.6"
robotech-macros = "1.7.6"

[patch.crates-io]
idworker = { path = "../idworker" }
wheel-rs = { path = "../wheel-rs" }
robotech = { path = "../robotech-rs/robotech" }
robotech-macros = { path = "../robotech-rs/robotech-macros" }
