[package]
name = "oss-svr"
version = "1.1.6"
edition = "2024"
authors = ["zbz"]
license = "MIT"
keywords = ["oss", "server", "upload", "download", "preview"]
description = "A Rust-based object storage service system that provides functionalities similar to Alibaba Cloud OSS. Supports file upload, download, preview, bucket management and more, using Actix-web as the web framework and SeaORM as the database ORM."
categories = ["web-programming::http-server"]
homepage = "https://github.com/rusthing/oss-rs"
repository = "https://github.com/rusthing/oss-rs"
readme = "README.md"

[dependencies]
log = { workspace = true }
clap = { workspace = true, features = ["derive"] }
chrono = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_with = { workspace = true}
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "signal"] }
actix-web = { workspace = true }
actix-multipart = { workspace = true }
sea-orm = { workspace = true, features = ["sqlx-postgres", "runtime-actix-rustls", "debug-print"] }
bytesize = { workspace = true, features = ["serde"] }
regex = { workspace = true }
tempfile = { workspace = true }
once_cell = { workspace = true }
o2o = { workspace = true }
sqlx = { workspace = true, features = ["any", "postgres"] }
validator = { workspace = true, features = ["derive"] }
strum = { workspace = true, features = ["derive"] }
utoipa = { workspace = true, features = ["actix_extras"] }
utoipa-swagger-ui = { workspace = true, features = ["actix-web"] }

idworker = { workspace = true, features = ["config"] }
wheel-rs = { workspace = true }
robotech = { workspace = true, features = ["web", "crud"] }

[dev-dependencies]
# cross打包时用，需要开启vendored feature
openssl = { workspace = true, features = ["vendored"] }
