[package]
name = "oss-svr"
version = "1.1.7"
edition = "2024"
authors = ["zbz"]
license = "MIT"
keywords = ["oss", "server", "upload", "download", "preview"]
description = "A Rust-based object storage service system that provides functionalities similar to Alibaba Cloud OSS. Supports file upload, download, preview, bucket management and more, using Axum as the web framework and SeaORM as the database ORM."
categories = ["web-programming::http-server"]
homepage = "https://github.com/rusthing/oss-rs"
repository = "https://github.com/rusthing/oss-rs"
readme = "README.md"

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true, features = ["derive"] }
chrono = { workspace = true }
derive_setters = { workspace = true }
typed-builder = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_with = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "signal"] }
tokio-util = { workspace = true }
axum = { workspace = true, features = ["macros", "multipart"] }
multer = "3.1.0"
futures-util = "0.3.32"
sqlx = { workspace = true, features = ["runtime-tokio", "any", "mysql", "postgres"] }
sea-orm = { workspace = true, features = ["sqlx-mysql", "sqlx-postgres", "runtime-tokio-rustls", "debug-print"] }
linkme = { workspace = true }
bytesize = { workspace = true, features = ["serde"] }
regex = { workspace = true }
o2o = { workspace = true }
validator = { workspace = true, features = ["derive"] }
strum = { workspace = true, features = ["derive"] }
utoipa = { workspace = true, features = ["axum_extras"] }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }
utoipauto = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }


idworker = { workspace = true }
wheel-rs = { workspace = true }
robotech = { workspace = true, features = ["web", "db", "macros"] }
robotech-macros = { workspace = true }

[build-dependencies]
# cross打包时用，需要开启vendored feature
openssl = { workspace = true, features = ["vendored"] }
